--- a/bluejeans/PKGBUILD
+++ b/bluejeans/PKGBUILD
@@ -2,21 +2,20 @@
 pkgname=bluejeans
 pkgver=2.6.255.8
 pkgrel=1
-pkgdesc="BlueJeans browser plugin"
-arch=('x86_64')
-url="http://www.bluejeans.com/"
-license=('Proprietary')
+pkgdesc='Browser plugin for cloud based video conferencing service.'
+arch=(x86_64)
+url='http://www.bluejeans.com/'
+license=(Proprietary)
 groups=()
 conflicts=(bjnplugin)
 depends=()
 makedepends=(dpkg)
 source=(
-    https://swdl.bluejeans.com/skinny/bjnplugin_${pkgver}-1_amd64.deb
+    "https://swdl.bluejeans.com/skinny/bjnplugin_${pkgver}-1_amd64.deb"
 )
-md5sums=('63c01cb8865abbc9a4e8b24310f5c31a')
-sha1sums=('ad6c253f6d9e5331454902abcf760dd68dcadf33')
+sha256sums=('b37f57b22b4b00bb1dfae6db1fe0425ed99f8e2ab8320cb0350ec3c4d2b8ff22')
 backup=('usr/lib/mozilla/plugins/.bjnplugin/config/config.xml')
 
 package() {
-    dpkg -x bjnplugin_${pkgver}-${pkgrel}_amd64.deb "${pkgdir}"
+    dpkg -x "bjnplugin_${pkgver}-${pkgrel}_amd64.deb" "${pkgdir}"
 }
